# libmetro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  METRONOME_FILE_FORMAT.md  Makefile  README.md
cmake/: FindSoundIo.cmake  FindStk.cmake  clang-cxx-dev-tools.cmake
demo/: butour_ngale.cpp
docgen/: Doxyfile.in
docs/: 1__gettingstarted_8md.html  2__completeexamples_8md.html  3__additive_8md.html  3__musicdemos_8md.html  4__mumt306_8md.html  accented__44_8cpp.html  accented__44_8cpp.js  annotated.html  annotated_dup.js  butour__ngale_8cpp.html  butour__ngale_8cpp.js  classes.html  classmetro_1_1Measure-members.html  classmetro_1_1Measure.html  classmetro_1_1Measure.js  classmetro_1_1MetroException-members.html  classmetro_1_1MetroException.html  classmetro_1_1MetroException.js  classmetro_1_1Metronome-members.html  classmetro_1_1Metronome.html  classmetro_1_1Metronome.js  classmetro_1_1Note-members.html  classmetro_1_1Note.html  classmetro_1_1Note.js  compound_8cpp.html  compound_8cpp.js  dir_7b0a5d1507c7f681cbfa1deb5990c6ea.html  dir_7b0a5d1507c7f681cbfa1deb5990c6ea.js  dir_b6c2a257bfab6380ca9b3cb94b12cb25.html  dir_b6c2a257bfab6380ca9b3cb94b12cb25.js  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files_dup.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  (+36 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  enums_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_9.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js  (+1 more)
doxygen/: 1_gettingstarted.md  2_completeexamples.md  2_complexexamples.md  2_txt_file_format.md  3_additive.md  3_mumt306.md  3_musicdemos.md  3_simple_odd_compound.md  4_mumt306.md  4_polyrhythms.md  5_mumt306.md  Doxyfile.in
example/: accented_44.cpp  drum_track_4_4.cpp  libjungle_example.cpp  metro44_from_scratch.cpp  metro44_from_scratch_drum_timbre.cpp  metro44_from_scratch_example.cpp  metro44_native_example.cpp  metronome_4_4.cpp  poly_3_2.cpp  tempo_example.cpp
examples/: 44_c.c  accented_44.cpp  compound.cpp  file_format_1.cpp  file_format_2.cpp  from_file.cpp  poly_323.cpp  poly_43.cpp  simple_and_odd.cpp
include/: cmetro.h  libjungle.h  libmetro.h  rhythm_n_beats.h
include/libjungle/: libjungle.h  libjungle_synthesis.h
programs/: click_track.cpp  compound.cpp  drum_track_4_4.cpp  gradual_tempo.cpp  metronome.cpp  metronome_4_4.cpp  poly_3_2.cpp  polyrhythm.cpp  switch_metronome.cpp  tap_tempo.cpp
sample_metronomes/: poly_23.txt  poly_32.txt  poly_32_format2.txt  poly_352_format2.txt  poly_43.txt  poly_43_format2.txt  poly_43_with_blanks.cpp  poly_43_with_clicks.txt  poly_53.txt  simple_34.txt
sample_metronomes1/: accented_44_with_clicks.txt  compound_98.txt  odd_54.txt
sample_metronomes2/: poly_53.txt
src/: audio.cpp  audio_engine.cpp  audio_outstream.cpp  audioengine.cpp  audioengine.h  cwrapper.cpp  event.cpp  fileparser.cpp  jungle.cpp  jungle.pc.in  jungle_static.pc.in  libmetro_private.h  measure.cpp  metro.pc.in  metro_static.pc.in  metronome.cpp  metronome.h  music.cpp  note.cpp  outstream.cpp  outstream.h  rnb.pc.in  tempo.cpp  timbre.cpp  timbregen.cpp  timbregen.h  timing.cpp  timing.h
src/audio/: engine.cpp  stream.cpp  timbre.cpp  tone.cpp
src/core/: event.cpp
src/core/audio/: engine.cpp  stream.cpp
src/synthesis/: metronome.cpp  timbre.cpp
test/: audio_engine.cpp  clock_accuracy.cpp  clock_drift.cpp  notes.cpp  tempo_test.cpp  unit.cpp
test/fixtures/: invalid_timbres.txt  single.txt
test/fixtures1/: blank.txt  multiple.txt
test/fixtures2/: invalid_mismatched_len.txt
